--- a/index.html
+++ b/index.html
@@ -351,6 +351,12 @@ div.tocify {
      
   </a>
 </li>
+<li>
+  <a href="http://twitter.com/thirstenstckton">
+    <span class="fab fa-twitter"></span>
+     
+  </a>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
