--- a/index.html
+++ b/index.html
@@ -334,6 +334,9 @@ div.tocify {
   <a href="about.html">Experience</a>
 </li>
 <li>
+  <a href="dashboard.html">Viz Example</a>
+</li>
+<li>
   <a href="mailto:&lt;tjs2193@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
