Links and spelling

--- a/about.html
+++ b/about.html
@@ -452,7 +452,7 @@ Nominee</p>
 <p><strong>2017</strong> - Airman of the Quarter Nominee</p>
 </div>
 <div id="technical-skills" class="section level2">
-<h2>Technical Skills</h2>
+<h2><em>Technical Skills</em></h2>
 <p><strong>Software Packages</strong><br />
 <em>(both Windows and Mac)</em></p>
 <ul>
