--- a/index.html
+++ b/index.html
@@ -377,11 +377,14 @@ div.tocify {
 <p><img src="Images/profile.jpeg" style="width:50%"style="height:50%"></p>
 <div id="about-me" class="section level1">
 <h1><strong>About Me</strong></h1>
-<p>Hardworking public health professional attending Columbia University
-Mailman School of Public Health in the Department of Epidmeiology.
-Passionate about addressing inequities and breaking intergenerational
-traumas through research. Areas of focus: lifecourse epidemiology,
-mental health, maternal and child health.</p>
+<p>Hardworking public health professional attending <a
+href="https://www.publichealth.columbia.edu/">Columbia University
+Mailman School of Public Health</a> in the <a
+href="https://www.publichealth.columbia.edu/academics/departments/epidemiology">Department
+of Epidemiology</a>. Passionate about addressing inequities and breaking
+intergenerational traumas through research. Areas of focus: <a
+href="https://www.publichealth.columbia.edu/research/imprints-center/lifecourse-studies">lifecourse</a>
+epidemiology, mental health, maternal and child health.</p>
 </div>
 
 
