--- a/about.html
+++ b/about.html
@@ -447,9 +447,8 @@ day.</p>
 </div>
 <div id="academic-awards-and-honours" class="section level2">
 <h2><em>Academic Awards and Honours</em></h2>
-<p><strong>2021</strong> - Non-Commissioned Officer of the Quarter
-Nominee</p>
-<p><strong>2017</strong> - Airman of the Quarter Nominee</p>
+<p><strong>2021</strong> - Non-Commissioned Officer of the Quarter</p>
+<p><strong>2017</strong> - Airman of the Quarter</p>
 </div>
 <div id="technical-skills" class="section level2">
 <h2><em>Technical Skills</em></h2>
