--- a/apexposter.html
+++ b/apexposter.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Academic and Professional Experiences</title>
+<title>2022 Applied Practicum Experience Poster: Early N3 lab, Department of Psychiatry, Columbia University</title>
 
 <script src="site_libs/header-attrs-2.16/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -29,9 +29,6 @@
        h6 {font-size: 12px;}
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
-<script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
-<link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
-<script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
@@ -231,69 +228,6 @@ $(document).ready(function () {
 
 
 
-<style type="text/css">
-
-#TOC {
-  margin: 25px 0px 20px 0px;
-}
-@media (max-width: 768px) {
-#TOC {
-  position: relative;
-  width: 100%;
-}
-}
-
-@media print {
-.toc-content {
-  /* see https://github.com/w3c/csswg-drafts/issues/4434 */
-  float: right;
-}
-}
-
-.toc-content {
-  padding-left: 30px;
-  padding-right: 40px;
-}
-
-div.main-container {
-  max-width: 1200px;
-}
-
-div.tocify {
-  width: 20%;
-  max-width: 260px;
-  max-height: 85%;
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-  div.tocify {
-    width: 25%;
-  }
-}
-
-@media (max-width: 767px) {
-  div.tocify {
-    width: 100%;
-    max-width: none;
-  }
-}
-
-.tocify ul, .tocify li {
-  line-height: 20px;
-}
-
-.tocify-subheader .tocify-item {
-  font-size: 0.90em;
-}
-
-.tocify .list-group-item {
-  border-radius: 0px;
-}
-
-
-</style>
-
-
 
 </head>
 
@@ -301,16 +235,6 @@ div.tocify {
 
 
 <div class="container-fluid main-container">
-
-
-<!-- setup 3col/9col grid for toc_float and main content  -->
-<div class="row">
-<div class="col-xs-12 col-sm-4 col-md-3">
-<div id="TOC" class="tocify">
-</div>
-</div>
-
-<div class="toc-content col-xs-12 col-sm-8 col-md-9">
 
 
 
@@ -372,117 +296,16 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Academic and Professional Experiences</h1>
+<h1 class="title toc-ignore">2022 Applied Practicum Experience Poster:
+Early N3 lab, Department of Psychiatry, Columbia University</h1>
 
 </div>
 
 
-<div id="education" class="section level2">
-<h2><em>Education</em></h2>
-<p><strong>2021 - 2023</strong></p>
-<p>M.P.H, Department of Epidemiology, Columbia University Mailman School
-of Public Health. <em>Certificate in Advanced Epidemiology.</em></p>
-<p><strong>2015 - 2020</strong></p>
-<p>BA Public Health, Department of Public Health and Populations
-Sciences, Boise State University. <em>Dean’s List: Spring 2020, Fall
-2020. Coursework in health education, health policy, social
-determinants, research and epidemiology</em></p>
-</div>
-<div id="research-experience" class="section level2">
-<h2><em>Research Experience</em></h2>
-<p><strong>May-August 2022</strong></p>
-<p><strong>Health Research Training Program Intern</strong>, Office of
-Research and Evaluation Bureau of Mental Health, New York City
-Department of Mental Health and Hygiene.</p>
-<p><em>Analyzing the distribution and determinants of mental health
-status across New York City.</em></p>
-<p>Responsibilities involved conducting literature reviews, creating
-analysis plans, data analysis, and data quality checks. Gained
-experience analyzing complex survey data. Final Project: The Association
-Between Fruit and Vegetable Consumption and Psychological Distress in
-New York City.</p>
-<p><strong>2021 –</strong></p>
-<p><strong>Research Assistant</strong>, Dr Marisa Spann, N3 early
-Neuroimaging, Neuroimmune and Neuropsychology Lab, Department of
-Psychiatry, Columbia University.</p>
-<p><em>This laboratory aims to improve our understanding of associations
-between severaltypes of prenatal exposures including maternal infection,
-autoimmune disease, BMI, and socioeconomic and psychological distress
-with offspring psychiatric risk, and the role of infant brain function
-and structure in mediating this risk.</em></p>
-<p>Responsibilities include assisting with manuscript preparation,
-attending weekly admin and research meetings and data management in
-REDCAP. In addition, I also take part in paper discussions to further my
-understanding in the field.</p>
-<p><strong>Jan–March 2020</strong></p>
-<p><strong>Epidemiology Internship</strong>, Department of Health
-Services, County of Sacramento, Public Health.</p>
-<p><em>Exploring the association between maternal mortality rates in
-Sacramento Countyand the fetal health outcomes.</em></p>
-<p>Responsibilities are inclusive of conducting literature reviews,
-gathering data from registries as well as the cleaning, entering and
-analysis of data. In addition, I assisted with Covid-19 response by
-creating line list for further epidemiologic analysis. Gained
-familiarity with Incident Command Systems and outbreak
-investigations.</p>
-</div>
-<div id="other-expereince" class="section level2">
-<h2><em>Other Expereince</em></h2>
-<p><strong>2015 – 2021</strong></p>
-<p><strong>Nondestructive Test Technician</strong>, Idaho Air National
-Guard.</p>
-<p><em>Conducted analysis on aircraft and a variety of aircraft parts to
-test for defects.Technique expertise in ultrasonic inspections, computed
-and traditional radiography, eddy current, penetrant analysis, oil
-analysis (PPM concentrations and wear of metals to diagnosis), and MSS
-data capture.</em></p>
-<p>Experiences included Specialization in A-10 air frame, Training new
-airmen,keeping up to date our maintenance database and deployment to
-Afghanistan in support of Operation Freedom Sentinel,
-5/11/2020-8/7/2020. Final Rank: E-5.</p>
-<p><strong>2017 -2018</strong></p>
-<p><strong>Substitute Paraeducator</strong>, Elk Grove Unified School
-District.</p>
-<p>Assisted teacher in special education classrooms either in a group
-setting or working one on one with a student. Responsibilities included
-ensuring understanding of material and helping students throughout the
-day.</p>
-</div>
-<div id="academic-awards-and-honours" class="section level2">
-<h2><em>Academic Awards and Honours</em></h2>
-<p><strong>2021</strong> - Non-Commissioned Officer of the Quarter</p>
-<p><strong>2017</strong> - Airman of the Quarter</p>
-</div>
-<div id="technical-skills" class="section level2">
-<h2><em>Technical Skills</em></h2>
-<p><strong>Software Packages</strong><br />
-<em>(both Windows and Mac)</em></p>
-<ul>
-<li>REDCap</li>
-<li>SAS</li>
-<li>SUDAAN</li>
-<li>R/R Studio</li>
-<li>Microsoft Office (Inc. Excel)</li>
-</ul>
-</div>
-<div id="publications" class="section level2">
-<h2><em>Publications</em></h2>
-<p><strong>Abstracts</strong></p>
-<p>Mueller I, Monk C, Cheng B, <strong>Stockton T</strong>, Rosen T,
-Peterson BS, Scheinost D, Spann MN (2022)“Mapping a dynamic interplay:
-Auditory attention and receptive language network development across the
-first eight months of life” Fetal, Infant, &amp; Toddler Imaging Group
-Conference, Paris, FR</p>
-<p>Pollatou A, <strong>Stockton T</strong>, Peterson BS, Scheinost D,
-Monk C, Spann MN (2022) “Fetal heart rate and heart rate variability
-associates with brainstem and hypothalamic connectivity in neonates”
-International Society for Developmental Psychobiology, San Diego, CA</p>
-</div>
+<p><img src="Images/Stockton_T_APEXPoster_n3.jpg" style="width:100%"style="height:100%"></p>
 
 
 
-</div>
-</div>
 
 </div>
 
@@ -515,35 +338,6 @@ $(document).ready(function () {
 
 <!-- code folding -->
 
-<script>
-$(document).ready(function ()  {
-
-    // temporarily add toc-ignore selector to headers for the consistency with Pandoc
-    $('.unlisted.unnumbered').addClass('toc-ignore')
-
-    // move toc-ignore selectors from section div to header
-    $('div.section.toc-ignore')
-        .removeClass('toc-ignore')
-        .children('h1,h2,h3,h4,h5').addClass('toc-ignore');
-
-    // establish options
-    var options = {
-      selectors: "h1,h2,h3",
-      theme: "bootstrap3",
-      context: '.toc-content',
-      hashGenerator: function (text) {
-        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
-      },
-      ignoreSelector: ".toc-ignore",
-      scrollTo: 0
-    };
-    options.showAndHide = true;
-    options.smoothScroll = true;
-
-    // tocify
-    var toc = $("#TOC").tocify(options).data("toc-tocify");
-});
-</script>
 
 <!-- dynamically load mathjax for compatibility with self-contained -->
 <script>
